# reef_adaptive_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: Adaptive_Gains.cfg  Gains.cfg
include/: PID.h  adaptive_control.h  adaptive_io.h  controller.h  simple_pid.h  state_space.h
launch/: adaptive_logitech.launch  controller_only.launch  logitech_sys_id.launch  logitech_teleop_control.launch  pid_controller.launch  realsense_adaptive_logitech.launch  relative_nav.launch  relative_nav_rgbd.launch  test_reef_2_alt_hold.launch
params/: adaptive_gains.yaml  kiwi_pid.yaml  quad_pid.yaml  y6_pid.yaml
scripts/: configure_lookup_table.m
src/: PID.cpp  adaptive_node.cpp  controller.cpp  pid_node.cpp  simple_pid.cpp
